# tdnuca-artifacts

./: command_lines.txt
hca-apps/: kmeans.c
other_apps/: README.md
other_apps/doc/: MD.tex  TABLE.tex  alya_dario.tex  bt-mz_dimitrios.tex  cg_luc.tex  cholesky_dimitrios.tex  fft.tex  heat_cxx_isaac.tex  hydro_cesar.tex  hydro_dimitrios.tex  ifcg.tex  inthist.tex  jacobi_vladimir.tex  kmeans_vladimir.tex  knn_vladimir.tex  lulesh_mpi_cesar.tex  makefile  matmul_vladimir.tex  md5_vladimir.tex  miniamr.tex  nas_bt-mz_cesar.tex  nas_lu-mz_cesar.tex  nas_sp-mz_cesar.tex  qr_tile.tex  raytrace_vladimir.tex  rgbyuv_vladimir.tex  sparselu_vladimir.tex  specfem3D_cgomez.tex  specfem3D_dimitrios.tex  specfem3D_vladimir.tex  stap_vladimir.tex  template.tex  tinyjpeg_vladimir.tex  vector-reduction_vladimir.tex
other_apps/ompss/MD/: Makefile  USAGE.md  give_params.sh  inputs.tgz  io_lammps.c  io_lammps.h  md.c  md.h
other_apps/ompss/MD/inputs/: README_inputs.md
other_apps/ompss/cg/: Makefile.am  README.md  configure.ac
other_apps/ompss/cg/m4/: ax_prog_cc_for_ompss.m4
other_apps/ompss/cg/scripts/: extrae_conf.xml  iteration_gradient.cfg  iteration_line.cfg  solving.cfg  trace_to_plot.py
other_apps/ompss/cg/src/: Makefile.am  cg.c  cg.h  counters.c  counters.h  debug.h  global.h  main.c  matrix.c  matrix.h  mmio.c  mmio.h
other_apps/ompss/cholesky/: Makefile  USAGE.md  nonnested.c
other_apps/ompss/cholesky/cholesky_scripts/scripts/: area4.sh  area8.sh  bf_results.txt  bfgather_res.sh  bfgenTrace.sh  blgenTrace.sh  check.sh  excel.sh  extrae_strace  gather_res.sh  hetero.conf  hetero128_43.conf  hola.txt  org_diff.sh  output.txt  perflog  pexcel.sh  print_trace.txt  real.sh  results_10it  run.sh  sim_chol.sh  simulate.sh  timelog  updatebl  xtrae_traces.sh
other_apps/ompss/cholesky/cholesky_scripts/scripts/pollack/: hetero112.conf  hetero28.conf  hetero40.conf
other_apps/ompss/cholesky/cholesky_scripts/scripts/realEval/: bf_28_4.txt  bl_steal0_strict0_16_4.txt  bl_steal0_strict1_24_4.txt
other_apps/ompss/cholesky/cholesky_scripts/scripts/results/: bf32K.txt  bf_1024 256 0 file 1.txt  bf_16384 1024 0 file 1.txt  bf_32768 1024 0 file 1.txt  bf_8192 1024 0 file 1.txt  botlev_8192 1024 0 file 1.txt  heft_16384 1024 0 file 1.txt  heft_8192 1024 0 file 1.txt  nosmt.sh  nosmtConfigs.h  runNview.sh  runSingle.sh
other_apps/ompss/cholesky/cholesky_scripts/scripts/results/ss_0_strict0/: bf_1024 128 0 file 1.txt  bf_1024 256 0 file 1.txt  bf_16384 1024 0 file 1.txt  bf_8192 1024 0 file 1.txt  botlev_1024 128 0 file 1.txt  botlev_1024 256 0 file 1.txt  botlev_16384 1024 0 file 1.txt  botlev_32768 1024 0 file 1.txt  botlev_8192 1024 0 file 1.txt  cpath_1024 128 0 file 1.txt  cpath_1024 256 0 file 1.txt  cpath_16384 1024 0 file 1.txt  cpath_8192 1024 0 file 1.txt
other_apps/ompss/cholesky/cholesky_scripts/scripts/results/ss_0_strict1/: botlev_1024 256 0 file 1.txt  botlev_16384 1024 0 file 1.txt  botlev_32768 1024 0 file 1.txt  botlev_8192 1024 0 file 1.txt  cpath_1024 256 0 file 1.txt  cpath_16384 1024 0 file 1.txt  cpath_8192 1024 0 file 1.txt  cpath_8192\ 1024\ 0\ file\ 1.txt
other_apps/ompss/cholesky/cholesky_scripts/scripts/results/ss_1_strict0/: botlev_1024 256 0 file 1.txt  botlev_16384 1024 0 file 1.txt  botlev_32768 1024 0 file 1.txt  botlev_8192 1024 0 file 1.txt  cpath_1024 256 0 file 1.txt  cpath_16384 1024 0 file 1.txt  (+1 more)
other_apps/ompss/cholesky/cholesky_scripts/scripts/tasksimConfs/: hetero21.conf  hetero2412.conf
other_apps/ompss/fft/: Makefile  USAGE.md  benchmark.c  fft.c  fft.h  seq.c  seq.h
other_apps/ompss/heat/: Makefile  USAGE.md  algorithms.cc  algorithms_inner.cc  algorithms_inner.hh  build.sh  heat.cc  heat.hh  matrix.cc  matrix.hh  misc.cc  misc.hh
other_apps/ompss/ifcg/: USAGE.md  cg_aux.c  cg_aux.h  cg_config.c  cg_config.h  cg_main.c  cg_main.h  cg_setup.c  cg_setup.h  csparse.h  vector.h
other_apps/ompss/ifcg/input/: LFAT5.rb
other_apps/ompss/ifcg/script/: hb_parser.sh
other_apps/ompss/inthist/: Makefile.am  README  USAGE.md  configure.ac  orig_README
other_apps/ompss/inthist/src/: Makefile.am  inthist_check.c  inthist_check.h  inthist_extra.h  inthist_image.h  inthist_kernels.c  inthist_kernels.h  inthist_main.c  inthist_randomimage.c  inthist_utils.c  inthist_utils.h
other_apps/ompss/knn/: Makefile  USAGE.md  knn.c
other_apps/ompss/matmul/: Makefile  USAGE.md  matmul_naive.c
other_apps/ompss/md5/: Makefile  USAGE.md  md5_bmark.c
other_apps/ompss/miniamr/: Makefile  README  USAGE.md  block.c  block.h  check_sum.c  comm.c  comm_alt.c  driver.c  init.c  main.c  move.c  plot.c  profile.c  proto.h  proto_task.h  refine.c  stencil.c  target.c  task_functions.c  util.c
other_apps/ompss/prk2_stencil/: Makefile  Makefile.knl  USAGE.md  build.sh
other_apps/ompss/prk2_stencil/src/: intel_prk2_stencil.c  stencil_kernel.c  stencil_kernel.h
other_apps/ompss/qr_tile/: Makefile  USAGE.md  allocation.hh  blocksize.f90  lapack_headers.h  matrix.cc  matrix.hh  misc.cc  misc.hh  qr-tile.cc  qr-tile.hh  qr.cc
other_apps/ompss/rgbyuv/: Makefile  USAGE.md  benchmark_engine.cpp  benchmark_engine.h  convert_engine.cpp  convert_engine.h  image.cpp  image.h  program.cpp  rotation_engine.cpp  rotation_engine.h
other_apps/ompss/sparseLU/: Makefile  USAGE.md  checkSparseLU.c
other_apps/ompss/specfem3D/: Makefile  USAGE.md  specfem3D_smpss_v0.81.c  values_from_mesher_C.h
other_apps/ompss/stap/: README
other_apps/ompss/stap/stap_coarse/: Makefile  USAGE.md  stap_bench_trans.c
other_apps/ompss/stap/stap_fine/: Makefile.am  Makefile.in  README  stap_bench_trans.c
other_apps/ompss/stream/: Makefile  USAGE.md  stream.c
other_apps/ompss/stream/kernels/: cuda.cu  cuda.h  init_cpu.c  init_gpu.c  smp.c  stream_cpu.c  stream_gpu.c
other_apps/ompss/symmatinv/: Makefile  USAGE.md  inverse.c
other_apps/ompss/tinyjpeg/: Makefile  README.txt  USAGE.md  conv_yuvbgr.c  huffman.c  jidctflt.c  loadjpeg.c  tinyjpeg-internal.h  tinyjpeg-parse.c  tinyjpeg.c  tinyjpeg.h
other_apps/ompss/vector-redu/: Makefile  USAGE.md  vector_reduction.c
(+7 files in other folders)
